Library-api Implement Booking - model - DTO - repository - service - controller
Web
Implement output of booking

--- a/web/src/main/resources/locale/messages_en.properties
+++ b/web/src/main/resources/locale/messages_en.properties
@@ -126,6 +126,12 @@ label.pages=Pages
 label.image=Image
 label.audio=Audio
 label.audience=Audience
+label.booking=Booking
+label.myBookingList=My booking's
+message.noBooking=No booking
+title.bookingList=My booking list
+label.bookingDate=booking date
+label.myBorowingList=My borrowing's
 
 
 
