--- a/web/src/main/resources/locale/messages.properties
+++ b/web/src/main/resources/locale/messages.properties
@@ -5,6 +5,7 @@ label.howto=Utilisation
 label.account=Compte
 label.address=Adresse
 label.book=Livre
+label.booking=R\u00E9servation
 label.books=Livres
 label.music=Musique
 label.video=Vid\u00E9o
@@ -91,12 +92,14 @@ label.interpreter=Interprete
 label.editor=Editeur
 label.type=Type
 label.format=Format
-label.myList=Mes emprunts
+label.myBorrowingList=Mes emprunts
+label.myBookingList=Mes r\u00E9servations
 message.noBook=Aucun livres
 message.noMusic=Aucune musique
 message.noVideo=Aucune vid\u00E9os
 message.noGame=Aucun jeux
 message.noBorrowing=Pas d'emprunt
+message.noBooking=Pas de r\u00E9servation
 label.logout=D\u00E9connexion
 label.borrowingList=Mes emprunts
 label.reset=R\u00E9initialisation
@@ -106,8 +109,10 @@ label.back=Retour
 label.summary=R\u00E9sum\u00E9
 label.setAside=R\u00E9server
 title.borrowingList=Ma liste d'emprunts
+title.bookingList=Ma liste de r\u00E9servations
 label.numberOfExtensions=Nombre d'extensions
 label.borrowingDate=Date d'emprunt
+label.bookingDate=Date de r\u00E9servation
 label.games=Jeux
 label.musics=Musiques
 label.videos=Vid\u00E9os
