Found bug cancel booking

--- a/web/src/main/resources/locale/messages.properties
+++ b/web/src/main/resources/locale/messages.properties
@@ -6,6 +6,7 @@ label.account=Compte
 label.address=Adresse
 label.book=Livre
 label.booking=R\u00E9servation
+label.bookingRank=Place
 label.books=Livres
 label.music=Musique
 label.video=Vid\u00E9o
@@ -127,3 +128,5 @@ label.isbn=ISBN
 label.image=Image
 label.audio=Audio
 label.audience=Audience
+label.myList=Mes emprunts
+label.myBorowingList=Mes emprunts
