--- a/web/src/main/resources/locale/messages_en.properties
+++ b/web/src/main/resources/locale/messages_en.properties
@@ -132,6 +132,7 @@ message.noBooking=No booking
 title.bookingList=My booking list
 label.bookingDate=booking date
 label.myBorowingList=My borrowing's
+label.bookingRank=Rank
 
 
 
