--- a/web/src/main/resources/locale/messages_fr.properties
+++ b/web/src/main/resources/locale/messages_fr.properties
@@ -141,4 +141,5 @@ label.myBookingList=Mes r\u00E9servations
 message.noBooking=Pas de r\u00E9servation
 title.bookingList=Ma liste de r\u00E9servations
 label.bookingDate=Date de r\u00E9servation
-label.myBorowingList=Mes emprunts
+label.bookingRank=Place
+label.myBorrowingList=Mes emprunts
