add attribute idMedia in booking

--- a/web/src/main/resources/locale/messages.properties
+++ b/web/src/main/resources/locale/messages.properties
@@ -1,59 +1,103 @@
 greeting=Bonjour! Bienvenue sur notre site!
 label.about=A propos!
-label.architecture=Architecture
-label.howto=Utilisation
 label.account=Compte
+label.acteur=Acteur
+label.actor=Acteur
 label.address=Adresse
+label.architecture=Architecture
+label.audience=Audience
+label.audio=Audio
+label.author=Auteur
+label.back=Retour
 label.book=Livre
 label.booking=R\u00E9servation
+label.bookingDate=Date de r\u00E9servation
 label.bookingRank=Place
 label.books=Livres
-label.music=Musique
-label.video=Vid\u00E9o
-label.game=Jeux
+label.borrowingDate=Date d'emprunt
+label.borrowingList=Mes emprunts
 label.cancel=Annuler
 label.city=Ville
+label.clip=Clip vid\u00E9o
+label.composer=Compositeur
 label.country=Pays
 label.date=Date
 label.delete=Supprimer
 label.description=Description
+label.director=Directeur
 label.edit=Modifier
+label.editor=Editeur
 label.email=Messagerie
+label.extend=Prolonger
 label.filter=Filtre
 label.firstName=Pr\u00E9nom
 label.footer.English=English
 label.footer.French=Fran\u00E7ais
 label.footer.help=Aide
 label.footer.joinus=Nous contacter
+label.format=Format
+label.game=Jeux
+label.games=Jeux
+label.howto=Utilisation
+label.image=Image
+label.info=Informations
+label.information=Information
+label.interpreter=Interprete
+label.isbn=ISBN
 label.lastName=Nom
-label.login=Connexion
 label.login.title=Connexion
+label.login=Connexion
+label.logout=D\u00E9connexion
 label.matchingPassword=Confirmation mot de passe
+label.music=Musique
+label.musics=Musiques
 label.myAccount=Mon compte
+label.myBookingList=Mes r\u00E9servations
+label.myBorrowingList=Mes emprunts
+label.myList=Mes emprunts
 label.name=Nom
 label.nav.home=Accueil
 label.nav.login=Connexion
 label.nav.logout=D\u00E9connexion
 label.nav.registration=Inscription
 label.new=Nouveau
-label.password=Mot de passe
-label.oldPassword=Ancien mot de passe
 label.newPassword=Nouveau mot de passe
+label.numberOfExtensions=Nombre d'extensions
+label.oldPassword=Ancien mot de passe
+label.pages=Pages
+label.password=Mot de passe
 label.phone=T\u00E9l\u00E9phone
 label.photo=Photo
 label.registration Enregistrement
+label.reset=R\u00E9initialisation
+label.returnDate=Retour
 label.save=Enregistrer
+label.setAside=R\u00E9server
 label.status=Statut
+label.stock Stock
+label.street=Rue
 label.submit=Valider
+label.summary=R\u00E9sum\u00E9
+label.title=Titre
+label.trailer=Bande annonce
+label.type=Type
+label.video=Vid\u00E9o
+label.videos=Vid\u00E9os
 label.view=Voir
 label.zipCode=Code postal
-
 lang.change=Changez la langue
 lang.eng=Anglais
 lang.fr=Fran\u00E7ais
+mail.greeting=Bonjour
+mail.regards=Toute l'\u00E9quipe des amis de l'escalade vous remercie.
 message.email=On ne divulgue jamais votre adresse de messagerie aux autes.
+message.noBook=Aucun livres
+message.noBooking=Pas de r\u00E9servation
+message.noBorrowing=Pas d'emprunt
+message.noGame=Aucun jeux
+message.noMusic=Aucune musique
 message.noTopo=Pas de Topo disponible
-
+message.noVideo=Aucune vid\u00E9os
 placeholder.alias=Pseudo
 placeholder.city=Ville
 placeholder.country=Pays
@@ -70,63 +114,16 @@ placeholder.status=Statut
 placeholder.street1=Adresse 
 placeholder.street2=Adresse compl\u00E9ment
 placeholder.street3=Adresse compl\u00E9ment
-placeholder.zipCode=Code postal
 placeholder.title=Titre
-
+placeholder.zipCode=Code postal
 title.account=Compte
+title.bookingList=Ma liste de r\u00E9servations
 title.bookList=Liste des livres
+title.borrowingList=Ma liste d'emprunts
 title.gameList=Liste des jeux
-title.musicList=Liste des musiques
-title.videoList=Liste des vid\u00E9os
 title.help=Aide
 title.login=Login
+title.musicList=Liste des musiques
 title.password=Modification du mot de passe
 title.registration=Inscription
-mail.greeting=Bonjour
-mail.regards=Toute l'\u00E9quipe des amis de l'escalade vous remercie.
-label.title=Titre
-label.author=Auteur
-label.acteur=Acteur
-label.composer=Compositeur
-label.director=Directeur
-label.interpreter=Interprete
-label.editor=Editeur
-label.type=Type
-label.format=Format
-label.myBorrowingList=Mes emprunts
-label.myBookingList=Mes r\u00E9servations
-message.noBook=Aucun livres
-message.noMusic=Aucune musique
-message.noVideo=Aucune vid\u00E9os
-message.noGame=Aucun jeux
-message.noBorrowing=Pas d'emprunt
-message.noBooking=Pas de r\u00E9servation
-label.logout=D\u00E9connexion
-label.borrowingList=Mes emprunts
-label.reset=R\u00E9initialisation
-label.info=Informations
-label.stock Stock
-label.back=Retour
-label.summary=R\u00E9sum\u00E9
-label.setAside=R\u00E9server
-title.borrowingList=Ma liste d'emprunts
-title.bookingList=Ma liste de r\u00E9servations
-label.numberOfExtensions=Nombre d'extensions
-label.borrowingDate=Date d'emprunt
-label.bookingDate=Date de r\u00E9servation
-label.games=Jeux
-label.musics=Musiques
-label.videos=Vid\u00E9os
-label.extend=Prolonger
-label.information=Information
-label.street=Rue
-label.actor=Acteur
-label.trailer=Bande annonce
-label.clip=Clip vid\u00E9o
-label.pages=Pages
-label.isbn=ISBN
-label.image=Image
-label.audio=Audio
-label.audience=Audience
-label.myList=Mes emprunts
-label.myBorowingList=Mes emprunts
+title.videoList=Liste des vid\u00E9os
